syntax = "proto3";

package auth.v1;

// Путь для go-кода: {модуль}/api/auth/v1;v1
option go_package = "github.com/Ostap00034/course-work-backend-auth-service/api/auth/v1;v1";

import "google/protobuf/empty.proto";

service AuthService {
  // Логинимся по email+паролю → получаем токен и срок жизни
  rpc Login(LoginRequest) returns (LoginResponse);
  // Проверяем валидность токена
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  // Отзываем токен
  rpc Revoke(RevokeRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
  string email    = 1;
  string password = 2;
}

message LoginResponse {
  string token     = 1;
  int64  expiresAt = 2; // unix timestamp
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string userId    = 1;
  int64  expiresAt = 2; // unix timestamp
}

message RevokeRequest {
  string token = 1;
}
